# libros2

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/libros2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/libros2/: DetalleLibroActivity.kt  DevolverActivity.kt  EliminarActivity.kt  HistorialPagosActivity.kt  MainActivity.kt  PagosRealizadosActivity.kt  PrestarActivity.kt  VerActivity.kt  registrarActivity.kt
app/src/main/res/drawable/: caja_redondeada.xml
app/src/main/res/layout/: activity_detalle_libro.xml  activity_devolver.xml  activity_eliminar.xml  activity_historial_pagos.xml  activity_main.xml  activity_pagos_realizados.xml  activity_prestar.xml  activity_registrar.xml  activity_ver.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/example/libros2/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
